--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,8 @@ data_ingestion:
   source_URL: https://github.com/pratim808/Mushroom_clsassification/raw/main/mushrooms.zip
   local_data_file: artifacts/data_ingestion/mushrooms.zip
   unzip_dir: artifacts/data_ingestion
+
+
+data_transformation:
+  root_dir: artifacts/data_transformation
+  data_path: artifacts/data_ingestion/mushrooms.csv
