--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,9 @@ data_ingestion:
   source_URL: https://github.com/pratim808/Mushroom_clsassification/raw/main/mushrooms.zip
   local_data_file: artifacts/data_ingestion/mushrooms.zip
   unzip_dir: artifacts/data_ingestion
+
+
+data_validation:
+  root_dir: artifacts/data_validation
+  unzip_data_dir: artifacts/data_ingestion/mushrooms.zip
+  STATUS_FILE: artifacts/data_validation/status.txt
