--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,5 +10,5 @@ data_ingestion:
 
 data_validation:
   root_dir: artifacts/data_validation
-  unzip_data_dir: artifacts/data_ingestion/mushrooms.zip
+  unzip_data_dir: artifacts/data_ingestion/mushrooms.csv
   STATUS_FILE: artifacts/data_validation/status.txt
