--- a/config/config.yaml
+++ b/config/config.yaml
@@ -17,6 +17,13 @@ data_validation:
 data_transformation:
   root_dir: artifacts/data_transformation
   data_path: artifacts/data_ingestion/mushrooms.csv
+  encoder_name: encoder.joblib
+
+
+model_trainer:
+  root_dir: artifacts/model_trainer
+  train_data_path: artifacts/data_transformation/train.csv
+  model_name: model.joblib
 
 
 model_evaluation:
@@ -24,10 +31,3 @@ model_evaluation:
   test_data_path: artifacts/data_transformation/test.csv
   model_path: artifacts/model_trainer/model.joblib
   metric_file_name: artifacts/model_evaluation/metric.json
-
-
-model_trainer:
-  root_dir: artifacts/model_trainer
-  train_data_path: artifacts/data_transformation/train.csv
-  model_name: model.joblib
-  
